--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
+    "@babel/generator": "^7.19.0",
+    "@babel/parser": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@babel/traverse": "^7.19.1",
+    "@types/node": "^18.7.18",
     "acorn": "^8.8.0",
     "typescript": "^3.7.5"
   }
